EXCEL -> JSON 배포환경에서 오류 처리 및 캐시맵 처리  스윙 테스트 파일 포함